--- a/src/derived/res/values-pl/strings.xml
+++ b/src/derived/res/values-pl/strings.xml
@@ -13,7 +13,7 @@
     <string name="filter_only_online">Tylko online</string>
     <string name="filter_select_city">Wybór miasta</string>
     <string name="dashbrd_popup_rating">Lubisz naszą aplikację? Podwyższ nam ranking! Im wyżej
-        ranking, tym więcej interesujących ludzi spotkasz w Topface
+        ranking, tym więcej interesujących ludzi spotkasz w Alcatel
     </string>
     <string name="dashbrd_popup_title">Ranking</string>
     <string name="dashbrd_popup_cancel">Nie pytać więcej</string>
@@ -21,11 +21,11 @@
     <string name="dashbrd_popup_later">Zapytać później</string>
     <string name="buying_store_connect">Zamawiam iTunes Store</string>
     <string name="buying_store_purchase">Kupuję w iTunes Store</string>
-    <string name="buying_tf_ack_sending">Wysyłam informację o zakupie w Topface</string>
+    <string name="buying_tf_ack_sending">Wysyłam informację o zakupie w Alcatel</string>
     <string name="leaders_select_photo">Wybierz efektowne zdjęcie</string>
     <string name="general_bookmarks_is_deleted">Użytkownik został usunięty z ulubionych</string>
     <string name="general_blacklist_is_deleted">Użytkownik został usunięty z czarnej listy</string>
-    <string name="invite_friends_title_short">Zaproś wszystkich znajomych do Topface</string>
+    <string name="invite_friends_title_short">Zaproś wszystkich znajomych do Alcatel</string>
     <string name="general_bookmarks_add_short">Do ulubionych</string>
     <string name="general_complaint">Poskarżyć się</string>
     <string name="general_type_complain">Temat skargi</string>
@@ -188,7 +188,7 @@
     <string name="settings_about">O programie</string>
     <string name="settings_version">Wersja</string>
     <string name="settings_copyright">Kopyrajt 2010-</string>
-    <string name="settings_rights_reserved">Topface \nWszystkie prawa zastrzeżone</string>
+    <string name="settings_rights_reserved">Alcatel \nWszystkie prawa zastrzeżone</string>
     <string name="settings_extra">Szczegółowa informacja jest dostępna na</string>
     <string name="settings_logout">Wyloguj się</string>
     <string name="settings_logout_msg">Na pewno chcesz wyjść?</string>
@@ -298,7 +298,7 @@
     <string name="girl">kobieta</string>
     <string name="start_communication">Zacznij rozmowę</string>
     <string name="birthdate">Urodziny</string>
-    <string name="welcome_to_topface">Witamy w Topface!</string>
+    <string name="welcome_to_topface">Witamy w Alcatel!</string>
     <string name="incorrect_email">Nieprawidłowo wpisany e-mail</string>
     <string name="incorrect_login">Nieprawidłowo wpisany login</string>
     <string name="incorrect_password">Nieprawidłowo wpisane hasło</string>
@@ -310,7 +310,7 @@
     <string name="default_photo_upload">Ładowanie zdjęć</string>
     <string name="default_photo_upload_error">Błąd podczas ładowania</string>
     <string name="default_photo_upload_complete">Ładowanie zostało zakończone</string>
-    <string name="general_error_try_again_later">Połączenie z Topface jest niemożliwe. Spróbuj
+    <string name="general_error_try_again_later">Połączenie z Alcatel jest niemożliwe. Spróbuj
         później
     </string>
     <string name="search_city_by_name">Wyszukiwanie miasta według nazwy</string>
@@ -380,7 +380,7 @@
     <string name="general_invite_friends">Zaproś znajomych</string>
     <string name="general_rest_contacts">Zostało Ci %d kontaktów</string>
     <string name="invite_friends_title">Zaproś wszystkich znajomych z książki telefonicznej w
-        Topface
+        Alcatel
     </string>
     <string name="invalid_contacts">Niektóre z kontaktów są niewłaściwe. Prosimy o dodanie
         właściwych kontaktów
@@ -463,7 +463,7 @@
     </string>
     <string name="black_list_add_short">Do czarnej listy</string>
     <string name="confirm_email_for_dating">Jesteśmy przeciwko spamowi. Potwierdź swój adres e-mail
-        aby korzystać z Topface!
+        aby korzystać z Alcatel!
     </string>
     <string name="complain_type_swearing_msg">Chamstwo, groźby, przekleństwa</string>
     <string name="general_exit">Wyloguj się</string>
