--- a/src/derived/res/values-uk/strings.xml
+++ b/src/derived/res/values-uk/strings.xml
@@ -17,7 +17,7 @@
     <string name="filter_select_city">Вибір міста</string>
     <string name="edit_block_photo">Фотографії</string>
     <string name="dashbrd_popup_rating">Сподобався наш додаток? Підніми нам рейтинг! Чим вищий
-        рейтинг, тим більше цікавих людей ти зустрінеш у Topface
+        рейтинг, тим більше цікавих людей ти зустрінеш у Alcatel
     </string>
     <string name="dashbrd_popup_title">Рейтинг</string>
     <string name="dashbrd_popup_cancel">Більше не питати</string>
@@ -32,7 +32,7 @@
     <string name="locking_screen_button_answer">Відповісти</string>
     <string name="general_bookmarks_is_deleted">Користувач вилучений з обраних</string>
     <string name="general_blacklist_is_deleted">Користувач вилучений з чорного списку</string>
-    <string name="invite_friends_title_short">Запросити всіх друзів в Topface</string>
+    <string name="invite_friends_title_short">Запросити всіх друзів в Alcatel</string>
     <string name="general_bookmarks_add_short">В обрані</string>
     <string name="general_complaint">Поскаржитися</string>
     <string name="general_type_complain">Тема скарги</string>
@@ -210,7 +210,7 @@
     <string name="settings_about">Про програму</string>
     <string name="settings_version">Версія</string>
     <string name="settings_copyright">Копірайт 2010 -</string>
-    <string name="settings_rights_reserved">Topface \nУсі права захищені</string>
+    <string name="settings_rights_reserved">Alcatel \nУсі права захищені</string>
     <string name="settings_extra">Детальну інформацію можна знайти на</string>
     <string name="settings_logout">Вийти з акаунта</string>
     <string name="settings_logout_msg">Ви дійсно хочете вийти?</string>
@@ -329,7 +329,7 @@
     <string name="girl">дівчина</string>
     <string name="start_communication">Почати спілкування</string>
     <string name="birthdate">ДР</string>
-    <string name="welcome_to_topface">Ласкаво просимо до Topface!</string>
+    <string name="welcome_to_topface">Ласкаво просимо до Alcatel!</string>
     <string name="incorrect_email">Неправильно введений e-mail</string>
     <string name="incorrect_login">Неправильно введений логін</string>
     <string name="incorrect_password">Неправильно введений пароль</string>
@@ -340,7 +340,7 @@
     <string name="default_photo_upload">Завантаження фотографії</string>
     <string name="default_photo_upload_error">Помилка завантаження</string>
     <string name="default_photo_upload_complete">Звантаження завершено!</string>
-    <string name="general_error_try_again_later">Неможливо підключитися до Topface. Повторіть спробу
+    <string name="general_error_try_again_later">Неможливо підключитися до Alcatel. Повторіть спробу
         пізніше.
     </string>
     <string name="search_city_by_name">Пошук міста за назвою</string>
@@ -410,7 +410,7 @@
     <string name="general_add">Додати</string>
     <string name="general_invite_friends">Запросіть друзів</string>
     <string name="general_rest_contacts">Вам залишилося %d контактів</string>
-    <string name="invite_friends_title">Запросити всіх друзів з телефонної книги в Topface</string>
+    <string name="invite_friends_title">Запросити всіх друзів з телефонної книги в Alcatel</string>
     <string name="invalid_contacts">Деякі з контактів були некоректними. Будь ласка, відправте
         коректні контакти
     </string>
@@ -489,7 +489,7 @@
     </string>
     <string name="black_list_add_short">У чорний список</string>
     <string name="confirm_email_for_dating">Ми проти спаму. Підтвердіть свою поштову адресу, щоб
-        знайомиться в Topface!
+        знайомиться в Alcatel!
     </string>
     <string name="complain_type_swearing_msg">Хамство, загрози, мат</string>
     <string name="general_exit">Вийти</string>
@@ -500,7 +500,7 @@
     </string>
     <string name="delete_account_are_you_sure">Ви точно впевнені?</string>
     <string name="delete">Видалити</string>
-    <string name="delete_account_warning">Увага! Ви намагаєтеся видалити свій профіль в Topface.
+    <string name="delete_account_warning">Увага! Ви намагаєтеся видалити свій профіль в Alcatel.
     </string>
     <string name="delete_account_error">На жаль, видалити ваш аккаунт не вдалося. Ви можете
         повторити ще раз.
